# doorstop

./: Cargo.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: main.yml
DoorstopTests/: Directory.Build.props  DoorstopTests.slnx  global.json  nuget.config
DoorstopTests/DoorstopTests/: DoorstopTests.csproj  TestGameTests.Debugging.cs  TestGameTests.cs
DoorstopTests/DoorstopTests.Entrypoint/: DebuggingTest.cs  Directory.Build.props  DobbyDetourFactory.cs  DoorstopEntrypoint.cs  DoorstopTests.Entrypoint.csproj  Entrypoint.cs  FinalPoint.cs  UnityEntrypoint.IL2CPP.cs  UnityEntrypoint.Mono.cs  UnityEntrypoint.cs  Utilities.cs
DoorstopTests/DoorstopTests.Entrypoint/runtimes/osx-arm64/native/: libdobby.dylib
DoorstopTests/DoorstopTests/TestGame/: DependencyArtifact.cs  DotNetRuntime.cs  Platform.cs  PlatformArchitecture.cs  ScriptingImplementation.cs  SteamLinuxRuntime.cs  TestGameBuild.cs  TestGameManager.cs  TestGameRunner.cs  TestGameTarget.cs
DoorstopTests/DoorstopTests/Utilities/: DiskHttpCacheHandler.cs  RetryException.cs  StringExtensions.cs  Xvfb.cs
DoorstopTests/PdbPostprocess/: PdbPostprocess.csproj  PdbPostprocess.props  Program.cs
DoorstopTests/libs/: BepInEx.GameTestFramework.0.1.0-dev.nupkg  MonoMod.Backports.2.0.0-alpha.dev.nupkg  MonoMod.Backports.Shims.2.0.0-alpha.dev.nupkg  MonoMod.RuntimeDetour.25.3.2-alpha.dev.nupkg  MonoMod.Utils.25.0.10-alpha.dev.nupkg
doorstop/: Cargo.toml
doorstop/src/: lib.rs
doorstop/src/windows/: dll_proxy.rs  mod.rs  utils.rs
doorstop_core/: Cargo.toml
doorstop_core/src/: config.rs  lib.rs
doorstop_core/src/patches/: boot_config_override_patch.rs  disable_console_redirect_patch.rs  mod.rs  mono_override_patch.rs
doorstop_core/src/runtimes/: il2cpp.rs  mod.rs  mono.rs
doorstop_core/src/utils/: bindings.rs  hook.rs  lazy_file_writer.rs  mod.rs  process_lock.rs
doorstop_launcher/: Cargo.toml
doorstop_launcher/src/: main.rs
doorstop_launcher/src/unix/: mod.rs  utils.rs
doorstop_launcher/src/windows/: mod.rs  utils.rs
doorstop_player/: Cargo.toml
doorstop_player/src/: main.rs
doorstop_player/src/unix/: mod.rs
doorstop_player/src/windows/: create_window_patch.rs  executable_name_patch.rs  mod.rs  unity_main.rs
doorstop_shared/: Cargo.toml
doorstop_shared/src/: lib.rs
