[workspace]
resolver = "3"
members = ["doorstop", "doorstop_shared", "doorstop_core", "doorstop_launcher", "doorstop_player"]

[workspace.package]
version = "0.1.0"
authors = ["js6pak"]
edition = "2024"
description = "A tool to execute managed .NET assemblies inside Unity as early as possible"
repository = "https://github.com/js6pak/doorstop"
license = "LGPL-2.1-only"
publish = false

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
multiple-crate-versions = "allow"

[workspace.dependencies]
cfg-if = "1"
anyhow = "1"
windows = "0.62.1"
libc = "0.2.174"
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
plthook = "0.3.0"
libloading = "0.8.9"

[profile.release]
split-debuginfo = "packed"
strip = true
lto = true
opt-level = "s"
# panic = "abort"
