[package]
name = "doorstop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
doorstop_shared = { path = "../doorstop_shared" }
doorstop_core = { path = "../doorstop_core" }
ctor = "0.5.0"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_SystemInformation"] }

