[package]
name = "doorstop_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
doorstop_shared = { path = "../doorstop_shared" }
cfg-if = { workspace = true }
anyhow = { workspace = true }
rust-ini = "0.21"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
plthook = { workspace = true }
libloading = { workspace = true }
eager2 = "1"
bitflags = "2"
const_format = { version = "0.2", features = ["fmt"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Security", "Win32_System_Console", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
dtor = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
